updateSchemaSprint
